--- a/script/immortalwrt/.config
+++ b/script/immortalwrt/.config
@@ -1,2 +1,204 @@
-CONFIG_PACKAGE_ip6tables-nft=y
-CONFIG_PACKAGE_kmod-ip6tables=y
+6in4 - 28
+attendedsysupgrade-common - 8
+autocore - 42
+base-files - 1676-r26804-a3639e76d6
+block-mount - 2023-02-28-bfe882d5-1
+bridger - 2023-05-12-d0f79a16
+busybox - 1.36.1-1
+ca-bundle - 20230311-1
+cgi-io - 2022-08-10-901b0f04-21
+default-settings - 1.1-26
+default-settings-chn - 1.1-26
+dnsmasq-full - 2.89-4
+dropbear - 2022.82-5
+eip197-mini-firmware - 20230625-1
+firewall4 - 2023-03-23-04a06bd7-1
+fstools - 2023-02-28-bfe882d5-1
+fwtool - 2019-11-12-8f7fe925-1
+getrandom - 2022-08-13-4c7b720b-2
+hostapd-common - 2023-06-22-599d00be-1.2
+ipv6helper - 5
+iw - 5.19-1
+iwinfo - 2023-05-17-c9f5c3f7-1
+jansson4 - 2.14-3
+jshn - 2023-05-23-75a3b870-1
+jsonfilter - 2018-02-04-c7e938d6-1
+kernel - 5.15.120-1-3dad9876795f4308223f2364420e92e4
+kmod-asn1-decoder - 5.15.120-1
+kmod-cfg80211 - 5.15.120+6.1.24-3
+kmod-crypto-acompress - 5.15.120-1
+kmod-crypto-aead - 5.15.120-1
+kmod-crypto-arc4 - 5.15.120-1
+kmod-crypto-authenc - 5.15.120-1
+kmod-crypto-ccm - 5.15.120-1
+kmod-crypto-cmac - 5.15.120-1
+kmod-crypto-crc32c - 5.15.120-1
+kmod-crypto-ctr - 5.15.120-1
+kmod-crypto-des - 5.15.120-1
+kmod-crypto-ecb - 5.15.120-1
+kmod-crypto-gcm - 5.15.120-1
+kmod-crypto-gf128 - 5.15.120-1
+kmod-crypto-ghash - 5.15.120-1
+kmod-crypto-hash - 5.15.120-1
+kmod-crypto-hmac - 5.15.120-1
+kmod-crypto-hw-safexcel - 5.15.120-1
+kmod-crypto-manager - 5.15.120-1
+kmod-crypto-md5 - 5.15.120-1
+kmod-crypto-null - 5.15.120-1
+kmod-crypto-rng - 5.15.120-1
+kmod-crypto-seqiv - 5.15.120-1
+kmod-crypto-sha1 - 5.15.120-1
+kmod-crypto-sha256 - 5.15.120-1
+kmod-crypto-sha512 - 5.15.120-1
+kmod-crypto-user - 5.15.120-1
+kmod-cryptodev - 5.15.120+1.12-mediatek-1
+kmod-gpio-button-hotplug - 5.15.120-3
+kmod-hwmon-core - 5.15.120-1
+kmod-hwmon-pwmfan - 5.15.120-1
+kmod-iptunnel - 5.15.120-1
+kmod-iptunnel4 - 5.15.120-1
+kmod-leds-gpio - 5.15.120-1
+kmod-lib-crc-ccitt - 5.15.120-1
+kmod-lib-crc32c - 5.15.120-1
+kmod-lib-lzo - 5.15.120-1
+kmod-lib-textsearch - 5.15.120-1
+kmod-mac80211 - 5.15.120+6.1.24-3
+kmod-macvlan - 5.15.120-1
+kmod-mppe - 5.15.120-1
+kmod-mt76-connac - 5.15.120+2023-07-04-f704e4f8-1
+kmod-mt76-core - 5.15.120+2023-07-04-f704e4f8-1
+kmod-mt7915e - 5.15.120+2023-07-04-f704e4f8-1
+kmod-mt7981-firmware - 5.15.120+2023-07-04-f704e4f8-1
+kmod-nf-conntrack - 5.15.120-1
+kmod-nf-conntrack-netlink - 5.15.120-1
+kmod-nf-conntrack6 - 5.15.120-1
+kmod-nf-flow - 5.15.120-1
+kmod-nf-log - 5.15.120-1
+kmod-nf-log6 - 5.15.120-1
+kmod-nf-nat - 5.15.120-1
+kmod-nf-nathelper - 5.15.120-1
+kmod-nf-nathelper-extra - 5.15.120-1
+kmod-nf-reject - 5.15.120-1
+kmod-nf-reject6 - 5.15.120-1
+kmod-nfnetlink - 5.15.120-1
+kmod-nft-core - 5.15.120-1
+kmod-nft-fib - 5.15.120-1
+kmod-nft-fullcone - 5.15.120+2023-01-10-95ad79bc-1
+kmod-nft-nat - 5.15.120-1
+kmod-nft-offload - 5.15.120-1
+kmod-nls-base - 5.15.120-1
+kmod-ppp - 5.15.120-1
+kmod-pppoe - 5.15.120-1
+kmod-pppox - 5.15.120-1
+kmod-sched-act-vlan - 5.15.120-1
+kmod-sched-bpf - 5.15.120-1
+kmod-sched-core - 5.15.120-1
+kmod-sched-flower - 5.15.120-1
+kmod-sit - 5.15.120-1
+kmod-slhc - 5.15.120-1
+kmod-thermal - 5.15.120-1
+kmod-usb-core - 5.15.120-1
+kmod-usb-xhci-hcd - 5.15.120-1
+kmod-usb-xhci-mtk - 5.15.120-1
+kmod-usb3 - 5.15.120-1
+libblobmsg-json20230523 - 2023-05-23-75a3b870-1
+libbpf1 - 1.2.2-1
+libc - 1.2.4-4
+libelf1 - 0.189-1
+libgcc1 - 12.3.0-4
+libgmp10 - 6.2.1-1
+libiwinfo-data - 2023-05-17-c9f5c3f7-1
+libiwinfo20230121 - 2023-05-17-c9f5c3f7-1
+libjson-c5 - 0.16-3
+libjson-script20230523 - 2023-05-23-75a3b870-1
+liblua5.1.5 - 5.1.5-10
+liblucihttp-lua - 2023-03-15-9b5b683f-1
+liblucihttp-ucode - 2023-03-15-9b5b683f-1
+liblucihttp0 - 2023-03-15-9b5b683f-1
+libmnl0 - 1.0.5-1
+libnetfilter-conntrack3 - 1.0.9-2
+libnettle8 - 3.9-1
+libnfnetlink0 - 1.0.2-1
+libnftnl11 - 1.2.6-1
+libnl-tiny2023-07-01 - 2023-07-01-d433990c-1
+libopenssl-conf - 3.0.9-2
+libopenssl3 - 3.0.9-2
+libpthread - 1.2.4-4
+libubox20230523 - 2023-05-23-75a3b870-1
+libubus-lua - 2022-06-15-9913aa61-1
+libubus20220615 - 2022-06-15-9913aa61-1
+libuci20130104 - 2023-03-05-04d0c46c-1
+libuclient20201210 - 2023-04-13-007d9454-1
+libucode20220812 - 2023-06-23-c7d84aae-1
+libustream-openssl20201210 - 2023-02-25-498f6e26-1
+logd - 2022-08-13-4c7b720b-2
+lua - 5.1.5-10
+luci - git-23.051.66410-a505bb1
+luci-app-attendedsysupgrade - git-23.132.65998-fa9fb2f
+luci-app-firewall - git-23.109.06619-0d66409
+luci-app-opkg - git-23.009.82915-ec3aac4
+luci-base - git-23.159.69121-0052e9f
+luci-compat - git-22.297.83017-673f382
+luci-i18n-attendedsysupgrade-zh-cn - git-23.184.28682-aa50d53
+luci-i18n-base-zh-cn - git-23.186.45737-60d793c
+luci-i18n-firewall-zh-cn - git-23.186.45737-60d793c
+luci-i18n-opkg-zh-cn - git-23.184.28682-aa50d53
+luci-lib-base - git-22.308.54612-9118452
+luci-lib-fs - 1.0-2
+luci-lib-ip - git-20.250.76529-62505bd
+luci-lib-ipkg - git-18.318.71164-4bbe325
+luci-lib-jsonc - git-22.079.54693-45f411b
+luci-lib-nixio - git-22.234.30511-21c8ca9
+luci-light - git-23.024.33244-34dee82
+luci-lua-runtime - git-23.124.18752-a72ed75
+luci-mod-admin-full - git-19.253.48496-3f93650
+luci-mod-network - git-23.186.45737-60d793c
+luci-mod-status - git-23.064.09249-1d0f9e1
+luci-mod-system - git-23.119.38277-ea7dc2c
+luci-proto-ipv6 - git-21.148.48881-79947af
+luci-proto-ppp - git-21.158.38888-88b9d84
+luci-theme-bootstrap - git-23.085.34270-d94a728
+mhz - 2023-06-17-11aac239-1
+mt7981-wo-firmware - 20230625-1
+mtd - 26
+netifd - 2023-06-04-ec9dba72-1
+nftables-json - 1.0.8-1
+odhcp6c - 2023-05-12-bcd28363-20
+odhcpd-ipv6only - 2023-06-24-52112643-1
+openwrt-keyring - 2023-05-22-455b399d-2
+opkg - 2022-02-24-d038e5b6-2
+ppp - 2.4.9.git-2021-01-04-7
+ppp-mod-pppoe - 2.4.9.git-2021-01-04-7
+procd - 2023-01-16-190f13a7-1
+procd-seccomp - 2023-01-16-190f13a7-1
+procd-ujail - 2023-01-16-190f13a7-1
+rpcd - 2023-03-14-d9788300-1
+rpcd-mod-file - 2023-03-14-d9788300-1
+rpcd-mod-iwinfo - 2023-03-14-d9788300-1
+rpcd-mod-luci - 20230123-1
+rpcd-mod-rpcsys - 2023-03-14-d9788300-1
+rpcd-mod-rrdns - 20170710
+rpcd-mod-ucode - 2023-03-14-d9788300-1
+shellsync - 0.2-2
+ubi-utils - 2.1.5-1
+uboot-envtools - 2023.04-1
+ubox - 2022-08-13-4c7b720b-2
+ubus - 2022-06-15-9913aa61-1
+ubusd - 2022-06-15-9913aa61-1
+uci - 2023-03-05-04d0c46c-1
+uclient-fetch - 2023-04-13-007d9454-1
+ucode - 2023-06-23-c7d84aae-1
+ucode-mod-fs - 2023-06-23-c7d84aae-1
+ucode-mod-html - 1
+ucode-mod-lua - 1
+ucode-mod-math - 2023-06-23-c7d84aae-1
+ucode-mod-ubus - 2023-06-23-c7d84aae-1
+ucode-mod-uci - 2023-06-23-c7d84aae-1
+uhttpd - 2023-06-25-34a8a74d-1
+uhttpd-mod-ubus - 2023-06-25-34a8a74d-1
+urandom-seed - 3
+urngd - 2020-01-21-c7f7b6b6-1
+usign - 2020-05-23-f1f65026-1
+wireless-regdb - 2023.05.03-1
+wpad-openssl - 2023-06-22-599d00be-1.2
+zlib - 1.2.13-1
