--- a/.github/workflows/ImmortalWrt_2305_MT3000.yml
+++ b/.github/workflows/ImmortalWrt_2305_MT3000.yml
@@ -24,7 +24,7 @@ env:
   SOURCE_URL: https://github.com/immortalwrt/immortalwrt
   SOURCE_BRANCH: openwrt-23.05
   DIY1_SH: script/immortalwrt/diy1.sh
-  DIY2_SH: script/immortalwrt/diy2.sh
+  DIY2_SH: script/immortalwrt/diy2_MT3000.sh
   COMMON_SH: script/common.sh
   INIT_SH: script/init-setting.sh
   TOOLCHAIN_TAG: toolchain
