--- a/.github/workflows/ImmortalWrt_2305_MT3000.yml
+++ b/.github/workflows/ImmortalWrt_2305_MT3000.yml
@@ -26,7 +26,7 @@ env:
   DIY1_SH: script/immortalwrt/diy1.sh
   DIY2_SH: script/immortalwrt/diy2_MT3000.sh
   COMMON_SH: script/common.sh
-  INIT_SH: script/init-setting.sh
+  INIT_SH: script/init-setting_mt3000.sh
   TOOLCHAIN_TAG: toolchain
   TOOLCHAIN_RELEASE_UPLOAD: true
   FIRMWARE_RELEASE_UPLOAD: true
