更改2102的时间

--- a/.github/workflows/ImmortalWrt_2305_MT3000.yml
+++ b/.github/workflows/ImmortalWrt_2305_MT3000.yml
@@ -11,7 +11,7 @@ name: Build ImmortalWrt23.05 MT3000
 on:
   repository_dispatch:
   schedule:
-    - cron: "0 16 * * *"
+    - cron: "0 16 * * 0"
   workflow_dispatch:
     inputs:
       ssh:
